# ktane

./: README.md
libs/can/: CAN.cpp  CAN.hpp
modules/ktane_debugger_module/: CMakeLists.txt
modules/ktane_debugger_module/src/: lcd1602_RGB_Module.c  lcd1602_RGB_Module.h  main.cpp  main.h
modules/ktane_sound_module/: CMakeLists.txt
modules/ktane_sound_module/src/: main.c
modules/ktane_sound_module/src/audio/: alarm_clock_beep.c  doublebeep_1_25.c  snip.c  strike.c
sounds/wav_convert/output/: doublebeep.c  needy_activated.c  needy_warning.c  singlebeep.c
sounds/wav_convert/wav_files/: README.md
